p3/confs/ingress.yaml
## Docs:
## - Kubernetes Ingress: https://kubernetes.io/docs/concepts/services-networking/ingress/
## - Traefik Kubernetes Ingress: https://doc.traefik.io/traefik/providers/kubernetes-ingress/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
  - host: argocd.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  namespace: dev
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground-app
            port:
              number: 8888
